# 3.5inCapacitiveTouchSmartWatch

CapacitiveTouchESP32/: CapacitiveTouchESP32.ino
ESP8266Master/: ESP8266Master.ino
libraries/TeensyAudioSampler/src/: TeensyPolyphony.h
libraries/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
libraries/ui/src/components/: ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_hour.c  ui_comp_hour.h  ui_comp_hourweather.c  ui_comp_hourweather.h  ui_comp_minute.c  ui_comp_minute.h
libraries/ui/src/fonts/: ui_font_Font1.c  ui_font_Font2.c  ui_font_Font3.c  ui_font_Large.c
libraries/ui/src/images/: ui_img_evening_png.c  ui_img_sunny_png.c
libraries/ui/src/screens/: ui_Environment.c  ui_Main.c  ui_SelectionMenu.c  ui_WIFIINFO.c  ui_timeChange.c
